<resources>
    <string name="app_name">Ouimgur</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="title_upload">Upload</string>
    <string name="title_user">User</string>
    <string name="login">login</string>
    <string name="oui">Oui.</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="imgur_image">Imgur image</string>
    <string name="choose_image">Choose image</string>
    <string name="chosen_image">chosen image</string>
    <string name="description">Description</string>
    <string name="loading">loading</string>
    <string name="title">Title</string>
    <string name="loading_image">loading image</string>
    <string name="type_something">Type something</string>
    <string name="avatar">avatar</string>
    <string name="upload_image">Upload image</string>
    <string name="title_details">Details</string>
    <string name="comment_count">Comments: %d</string>
    <string name="base_query_input">Image, album…</string>
    <string name="file_type">File type:</string>
    <string name="exactly">Exactly</string>
    <string name="any_of">Any of</string>
    <string name="advanced_search">Advanced search</string>
    <string name="sort_by">Sort by:</string>
    <string-array name="type_array">
        <item>all</item>
        <item>jpg</item>
        <item>png</item>
        <item>gif</item>
    </string-array>
    <string-array name="search_sort_array">
        <item>time</item>
        <item>viral</item>
        <item>top</item>
    </string-array>
    <string-array name="fav_sort_array">
        <item>newest</item>
        <item>oldest</item>
    </string-array>
    <string-array name="comment_sort_array">
        <item>best</item>
        <item>top</item>
        <item>new</item>
    </string-array>
</resources>
