<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/login_fragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.epitech.epicture.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.epitech.epicture.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.epitech.epicture.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/login_fragment"
        android:name="com.epitech.epicture.ui.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.epitech.epicture.ui.upload.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.epitech.epicture.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user">
        <action
            android:id="@+id/action_navigation_user_to_login_fragment"
            app:destination="@id/login_fragment"
            app:popUpTo="@id/navigation_user"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>